<resources>
    <string name="app_name">GHS Peripheral Simulator</string>
    <string name="title_activity_main2">GHS Simulator</string>
    <string name="lbl_observation_types">Observation type(s) to send</string>
    <string name="tab_text_ble_info">Device</string>
    <string name="tab_text_observations">Obs</string>
    <string name="tab_text_date">Date</string>
    <string name="tab_text_users">Users</string>
    <string name="tab_text_log">Log</string>
    <string name="tab_text_experimental">Experimental</string>
    <string name="tab_text_settings">Settings</string>
    <string name="advertisment_name">Device name</string>
    <string name="model_number">Model number</string>
    <string name="change">Change</string>
    <string name="clear">Clear</string>
    <string name="obs_store_count">Observation Store Count</string>
    <string name="unknown">Unknown</string>
    <string name="startAdvertising">Start Advertising</string>
    <string name="stopAdvertising">Stop Advertising</string>
    <string name="startEmitter">Start observation emitter</string>
    <string name="stopEmitter">Stop observation emitter</string>
    <string name="singleShotEmit">Emit single-shot observation(s)</string>
    <string name="addStoredObs">Add stored observation(s)</string>
    <string name="triggerObservationSchedule">Trigger Observation Schedule</string>
    <string name="choiceTempObs">Temperature (Simple Numeric)</string>
    <string name="choiceHRObs">Heart rate (Simple Numeric)</string>
    <string name="choiceSPO2Obs">SpO2 (Simple Numeric)</string>
    <string name="choiceBPObs">Blood Pressure (Compound Numeric)</string>
    <string name="choicePPGObs">PPG array (Sample Array)</string>
    <string name="choiceDiscreteObs">Alert Type (Discrete)</string>
    <string name="choiceStringObs">Drug Name (String)</string>
    <string name="choiceTLVObs">Drug Injection (TLV)</string>
    <string name="choiceCompoundDiscreteObs">Pump Program (Compound Discrete)</string>
    <string name="choiceCompoundStateEventObs">Alarm State (Compound State/Event)</string>
    <string name="choiceMergeObs">Merge observations into ACOM Object</string>
    <string name="choiceBundleObs">Bundle selected observations</string>
    <string name="allow_multiclient_connect">Allow Multiple Connections</string>
    <string name="liveObsIndicate">Indicate Live Obs Characteristic</string>
    <string name="liveObsNotify">Notify Live Obs Characteristic</string>
    <string name="serverBusy">Respond server busy to RACP</string>
    <string name="storedObservationDelay">Delay between stored obs send</string>

    <string name="clear_log">Clear log</string>

    <string name="typeCodeTitle">Type Codes:</string>
    <string name="choiceShortTypeCodes">2-byte obs types (Partition 2, 32k types)</string>

    <string name="tlvOptionsTitle">TLV Options:</string>
    <string name="choiceOmitFixedLengthTypes">Omit length for fixed length types (TV)</string>
    <string name="choiceOmitHandleTLV">Omit handle TLV</string>
    <string name="choiceOmitUnitCode">Omit unit code TLV for known obs types</string>

    <string name="obsTypeTitle">Observation types:</string>
    <string name="choiceObsArrayType">Observation array type\n(with inner obs timestamp removed)</string>

    <string name="obsSizesTitle">Object sizes:</string>
    <string name="simpleNumericObs">Simple numeric observation: 142 bytes</string>
    <string name="central_connected">(Connected)</string>
    <string name="central_disconnected">(Disconnected)</string>

    <string name="invalid_section_number">Invalid section number</string>

    <string name="serverClock">Current clock:</string>
    <string name="tickCounter">Tick counter:</string>
    <string name="dateSyncMethod">Date sync:</string>
    <string name="clockStatus">Clock status:</string>
    <string name="clockCapabilities">Clock capabilites:</string>
    <string name="clockNeedsToBeSet">Clock needs to be set</string>
    <string name="clockTickCounter">Clock is a tick counter</string>
    <string name="clockUTCTime">Clock reports UTC time</string>
    <string name="clockMilliseconds">Clock reports milliseconds</string>
    <string name="clockIncludesTZ">Clock includes TZ/DST offset</string>
<!--    <string name="clockIncludesDST">Clock includes DST</string>-->
    <string name="clockSettable">Clock can be set</string>
    <string name="clockManagesDST">Clock manages DST changes</string>
    <string name="clockManagesTZ">Clock manages time zone changes</string>
    <string name="clockReset">Reset clock to system</string>
    <string name="clockUpdate">Add 1 hr to clock</string>

    <string name="currentUser">Current user:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>