<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.philips.btserverapp.ObservationsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical"
        android:paddingTop="32dp">

        <CheckBox
            android:id="@+id/checkboxTempObs"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/choiceTempObs" />

        <CheckBox
            android:id="@+id/checkboxHRObs"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/choiceHRObs" />

        <CheckBox
            android:id="@+id/checkboxPPGObs"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/choicePPGObs" />

        <CheckBox
            android:id="@+id/checkboxSPO2Obs"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/choiceSPO2Obs" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="16dp"
            android:background="#20FFFFFF"/>

        <CheckBox
            android:id="@+id/checkboxMergeObs"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/choiceMergeObs" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="#20FFFFFF"/>

        <Button
            android:id="@+id/btnStartStopEmitter"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:background="#10FFFFFF"
            android:fontFamily="sans-serif-medium"
            android:text="@string/startEmitter"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnSingleShotEmit"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="16dp"
            android:background="#10FFFFFF"
            android:fontFamily="sans-serif-medium"
            android:text="@string/singleShotEmit"
            android:textAllCaps="false" />

    </LinearLayout>

</FrameLayout>