<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.GenericHealthSensorFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:orientation="vertical"
        android:paddingTop="32dp">

        <CheckBox
            android:id="@+id/checkboxTempObs"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:buttonTint="@color/cardview_dark_background"
            android:text="@string/choiceTempObs"
            android:textColor="@android:color/black" />

        <CheckBox
            android:id="@+id/checkboxHRObs"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:buttonTint="@color/cardview_dark_background"
            android:text="@string/choiceHRObs"
            android:textColor="@android:color/black" />

        <CheckBox
            android:id="@+id/checkboxPPGObs"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:buttonTint="@color/cardview_dark_background"
            android:text="@string/choicePPGObs"
            android:textColor="@android:color/black" />

        <CheckBox
            android:id="@+id/checkboxMergeObs"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:buttonTint="@color/cardview_dark_background"
            android:text="@string/choiceMergeObs"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/btnStartStopEmitter"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:background="@color/cardview_dark_background"
            android:fontFamily="sans-serif-medium"
            android:text="@string/startEmitter"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />


    </LinearLayout>

</FrameLayout>